# tree-sitter-gritql

./: CMakeLists.txt  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-gritql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gritql/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterGritQL/: gritql.h
bindings/swift/TreeSitterGritQLTests/: TreeSitterGritQLTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: ffi.txt  private.txt
